# trading-tools

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: README.md  settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BACKTESTER.md  CLIENTS.md  GETTING_STARTED.md  HTTP_CLIENT_USAGE.md  POLYMARKET.md  PROJECT_SETUP_SUMMARY.md  RESTRUCTURE_SUMMARY.md  STRATEGY_GUIDE.md
infra/: .gitignore  cloudwatch.tf  directional-paper.service  ec2.tf  iam.tf  main.tf  network.tf  outputs.tf  rds.tf  sns.tf  variables.tf
infra/templates/: user-data.sh
src/trading_tools/: __init__.py  config.py
src/trading_tools/apps/: __init__.py
src/trading_tools/apps/backtester/: __init__.py  _providers.py  charts.py  compare.py  engine.py  execution.py  indicators.py  metrics.py  monte_carlo.py  multi_asset_engine.py  multi_asset_portfolio.py  portfolio.py  run.py  strategy_factory.py  walk_forward.py
src/trading_tools/apps/bot_framework/: __init__.py  balance_manager.py  heartbeat.py  order_executor.py  redeemer.py  shutdown.py
src/trading_tools/apps/directional/: __init__.py  adapters.py  backtest_runner.py  config.py  engine.py  estimator.py  features.py  grid_backtest.py  kelly.py  market_data_live.py  models.py  ports.py  repository.py  trader.py  weight_trainer.py
src/trading_tools/apps/fetcher/: __init__.py  run.py
src/trading_tools/apps/polymarket/: __init__.py  backtest_common.py  grid_backtest.py  run.py
src/trading_tools/apps/polymarket_bot/: __init__.py  base_engine.py  base_portfolio.py  engine.py  kelly.py  live_engine.py  live_portfolio.py  models.py  portfolio.py  price_tracker.py  protocols.py  snapshot_simulator.py  strategy_factory.py
src/trading_tools/apps/spread_capture/: __init__.py  accumulating_trader.py  adapters.py  backtest_runner.py  config.py  engine.py  fees.py  grid_backtest.py  limit_backtest.py  market_scanner.py  models.py  order_book_feed.py  ports.py  repository.py  spread_trader.py
src/trading_tools/apps/tick_collector/: __init__.py  collector.py  config.py  models.py  repository.py  snapshot_builder.py  ws_client.py
src/trading_tools/apps/whale_copy/: __init__.py  config.py  models.py  signal.py  trader.py
src/trading_tools/apps/whale_copy_trader/: __init__.py  config.py  copy_backtest_engine.py  copy_backtest_models.py  copy_trader.py  models.py  repository.py  signal_detector.py
src/trading_tools/apps/whale_monitor/: __init__.py  analyser.py  collector.py  config.py  correlator.py  enricher.py  leaderboard.py  (+4 more)
src/trading_tools/clients/: _http_status.py
src/trading_tools/config/: .gitignore  directional_weights.yaml  settings.local.yaml.example  settings.yaml
src/trading_tools/core/: __init__.py  config.py  models.py  polymarket_fields.py  protocols.py  timestamps.py
src/trading_tools/data/: __init__.py
src/trading_tools/revolut_x/: __init__.py
src/users/owarwick/: copy_trading_backtest.ipynb  interesting_wallets.md  lf_whale_hunter.ipynb  todo.txt
tests/: __init__.py  conftest.py  test_config.py  test_example.py
tests/apps/: __init__.py
tests/apps/backtester/: __init__.py  test_charts.py  test_compare.py  test_engine.py  test_execution.py  test_indicators.py  test_metrics.py  test_monte_carlo.py  test_multi_asset_engine.py  test_multi_asset_portfolio.py  test_portfolio.py  test_providers.py  test_run.py  test_walk_forward.py
tests/apps/bot_framework/: __init__.py  test_balance_manager.py  test_heartbeat.py  test_order_executor.py  test_redeemer.py  test_shutdown.py
tests/apps/directional/: __init__.py  test_adapters.py  test_backtest_cmd.py  test_backtest_runner.py  test_config.py  test_engine.py  test_estimator.py  test_features.py  test_grid_backtest.py  test_grid_cmd.py  test_kelly.py  test_live_execution.py  test_market_data_live.py  test_market_data_ws.py  test_models.py  test_repository.py  test_trader.py  test_weight_trainer.py
tests/apps/fetcher/: __init__.py  test_run.py
tests/apps/polymarket/: __init__.py  test_backtest_common.py  test_backtest_snipe_cmd.py  test_backtest_ticks_cmd.py  test_bot_cmd.py  test_bot_live_cmd.py  test_cli.py  test_cli_helpers.py  test_grid_backtest.py  test_spread_capture_cmd.py  test_tick_collector_cmd.py  test_trade_cmd.py  test_whale_copy_cmd.py  test_whale_correlate_cmd.py  test_whale_markets_cmd.py
tests/apps/polymarket_bot/: __init__.py  conftest.py  test_base_engine.py  test_engine.py  test_kelly.py  test_live_engine.py  test_live_portfolio.py  test_models.py  test_portfolio.py  test_price_tracker.py  test_protocols.py  test_snapshot_simulator.py  test_strategy_factory.py
tests/apps/spread_capture/: __init__.py  test_accumulating_position.py  test_accumulating_trader.py  test_backtest_runner.py  test_config.py  test_engine.py  test_limit_backtest.py  test_market_scanner.py  test_models.py  test_order_book_feed.py  test_ports_adapters.py  test_repository.py  test_spread_trader.py
tests/apps/tick_collector/: __init__.py  test_collector.py  test_models.py  test_repository.py  test_snapshot_builder.py  test_ws_client.py
tests/apps/whale_copy/: __init__.py  test_config.py  test_signal.py  test_trader.py
tests/apps/whale_copy_trader/: __init__.py  test_config.py  test_copy_trader.py  test_repository.py  test_signal_detector.py
tests/apps/whale_monitor/: __init__.py  conftest.py  test_analyser.py  test_collector.py  test_correlator.py  test_market_analyser.py  test_models.py  test_repository.py  test_trade_parser.py
tests/clients/binance/: __init__.py  test_client.py
tests/clients/polymarket/: __init__.py  test_client.py  test_clob_adapter.py  test_ctf_redeemer.py  test_exceptions.py  test_gamma_client.py  test_models.py
tests/clients/revolut_x/: __init__.py  test_auth.py  test_client.py
tests/core/: test_models.py  test_polymarket_fields.py  test_protocols.py  test_timestamps.py
tests/data/providers/: test_binance_provider.py  test_csv_provider.py  test_order_book_feed.py  test_revolut_x_provider.py
tests/revolut_x/: __init__.py  test_auth.py
(+95 files in other folders)
